turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:9: error: not found: value Colors
    setCouleurBrosse(Colors((compteur+1)%Colors.length))
                     ^LangtonsAnt:9: error: not found: value Colors
    setCouleurBrosse(Colors((compteur+1)%Colors.length))
                                         ^LangtonsAnt:16: error: not found: value Colors
    setCouleurBrosse(Colors((compteur+1)%Colors.length))
                     ^LangtonsAnt:16: error: not found: value Colors
    setCouleurBrosse(Colors((compteur+1)%Colors.length))
                                         ^