turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var couleur = getCouleurSol()
  var compteur = 0
  while (couleur != colors(compteur)) {
    compteur = compteur+1
  }
  if (rule(compteur) == 'R') {
    setCouleurBrosse(Colors((compteur+1)%Colors.length))
    baisseBrosse()
    leveBrosse()
    droite()
    avance()
  }
  else {
    setCouleurBrosse(Colors((compteur+1)%Colors.length))
    baisseBrosse()
    leveBrosse()
    gauche()
    avance()
  }
}

